assets/css/styles.css
:root{
    --dark: #000000;
    --darkPurple: #150050;
    --purple: #3F0071;
    --lightPurple: #610094;
    --mainText: 'Noto Serif', serif;
}
body{
    background-color: var(--lightPurple);
}

.jumbotron-fluid{
    background-color: var(--dark);
}
.img-fluid{
    border-radius: 5%;
    padding-bottom: 7px;
    height: 400px;
  
}
.Daniel, .aboutMe{
    text-align: center;
    color: var(--dark);
    background-color: var(--lightPurple);
    font-weight: bolder;
    font-family: var(--mainText);
}
.aboutMe{
    border-radius: 5%;
    padding: 7px;
}
footer{
    text-align: center;
    background-color: var(--dark);
    color: var(--lightPurple);
    font-size: 18px;
    font-family: var(--mainText);
}

